--- a/_posts/2023-03-21-TITLE.md
+++ b/_posts/2023-03-21-TITLE.md
@@ -3,6 +3,7 @@ title: TITLE
 date: 2023-03-21 00:00:00 +0000
 categories: [Fuzzing]
 tags: [français, fuzzing]     # TAG names should always be lowercase
+mermaid: true
 ---
 
 # Introduction #TODO
